--- a/RedeSocial/static/css/estilorede.css
+++ b/RedeSocial/static/css/estilorede.css
@@ -26,6 +26,48 @@ staticfiles
     -ms-filter: "alpha(opacity=30)";
     text-shadow: none;	
 }
+.loader {
+  margin: 60px auto;
+  font-size: 3px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-left: 1.1em solid #004080;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+}
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 10em;
+  height: 10em;
+}
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+/*fim ^ */
 
 .sk-circle {
   margin: 15px auto;
@@ -172,6 +214,12 @@ button:focus {
 
 .remove-feed:hover {
 	color: #333333;
+}
+
+.container-mensagem-remove {
+	height: 27px;
+	border-bottom: 1px solid #E0E0E0;
+	margin-bottom: 7px;
 }
 
 .img-thumbnail {
@@ -457,7 +505,7 @@ aside * {
 	float: left;
 	width: 100%;
 	background: ;
-	border-bottom: 1px solid #E0E0E0  ;
+	border-bottom: 1px solid #E0E0E0;
 }
 
 #containerSolicitacao ul li {
@@ -975,6 +1023,11 @@ hr.style-seven:before { /* Not really supposed to work, but does */
 	overflow: hidden;
 }
 
+.borda-menu {
+	border-left: 4px solid #F8C51B;
+	background: #F0F0F0;
+}
+
 #menu-ul li a {
 	display: block;
 	padding: 8px;
@@ -983,12 +1036,14 @@ hr.style-seven:before { /* Not really supposed to work, but does */
 	color: black;
 	border-radius: 0px;
 	font-size: 11pt;
+	background-color: #f7f7f7;
 }
 
 #menu-ul li a:hover {
 	border-left: 4px solid #F8C51B;
 	background: #F0F0F0;
 }
+
 
 #menu-ul li ul {
 	display: none;
