--- a/RedeSocial/templates/en/public/Desafios_Individual.HTML
+++ b/RedeSocial/templates/en/public/Desafios_Individual.HTML
@@ -1,9 +1,6 @@
-{% extends "en/public/Base.HTML" %} {% block contents %}
 <meta charset="utf-8">
 <div id="containerAmigos" style="margin-top: 30px;">
 	<div id="containerSolicitacao">
-		<p>{{msg_erro}}</p>		
-		
 		<fieldset>
 			<legend>Desafiar</legend>
 
@@ -22,7 +19,7 @@
 								<optgroup label="Desafios">
 
 									{% for a in desafios %}
-										<option value="{{a.id}}">{{a.nome}}</option>
+										<option id="hide-desafio" value="{{a.id}}">{{a.nome}}</option>
 									{% endfor %}
 									
 								</optgroup>
@@ -43,10 +40,7 @@
 							<select class="form-control-cadastro" name="cAmigos">
 								<optgroup label="Amigos">
 									
-									
-									<option value="{{amigo.id}}">{{amigo.nome}}</option>
-
-		
+									<option id="hide-amigo" value="{{amigo.id}}">{{amigo.nome}}</option>
 
 								</optgroup>
 							</select>
@@ -55,7 +49,7 @@
 				</table>
 
 				<center>
-					<input type="submit" value="Lançar Desafio"
+					<input type="submit" id="btn-lancar" value="Lançar Desafio"
 						class="btn btn-primary btn-second">
 				</center>
 			</form>
@@ -63,4 +57,4 @@
 	
 	</div>
 </div>
-{% endblock contents %}
+
