--- a/RedeSocial/templates/en/public/Tela_Amigos.HTML
+++ b/RedeSocial/templates/en/public/Tela_Amigos.HTML
@@ -43,7 +43,7 @@
 			<legend>Soliticações</legend>
 
 			{% for b in Minhas_Solicitacoes %}
-			<ul>
+			<ul id="ul-solicitacoes">
 
 				<li><img src="{{b.usuario.foto.url}}" id="imgAmigos"></li>
 
@@ -56,12 +56,12 @@
 					<div class="form-ano">{{b.usuario.turma}}</div>
 				</li>
 
-				<form action="pedido_Solicitacao" method="post">
-					{% csrf_token %} <input type="hidden" name="cPedido_usuario_id"
-						value={{b.usuario.id}} /> <input type="hidden"
-						name="cPedido_solicitacao" value={{False}} /> <input
-						type="hidden" name="cPedido_solicitacao_id" value={{b.id}} />
-
+				<form action="pedido_Solicitacao" id="form-recusar-solicitacao" method="post">
+					{% csrf_token %} 
+					
+					<input type="hidden" name="cPedido_usuario_id" value="{{b.usuario.id}}"/> 
+					<input type="hidden" name="cPedido_solicitacao" value="{{False}}"/>
+					<input type="hidden" name="cPedido_solicitacao_id" value="{{b.id}}"/>
 
 					<button type="submit" value="recusar" class="btn btn-danger btn-lg"
 						title="Recusar solicitação">
@@ -69,12 +69,13 @@
 					</button>
 
 				</form>
-				<form action="pedido_Solicitacao" method="post">
-					{% csrf_token %} <input type="hidden" name="cPedido_usuario_id"
-						value={{b.usuario.id}} /> <input type="hidden"
-						name="cPedido_solicitacao" value={{True}} /> <input type="hidden"
-						name="cPedido_solicitacao_id" value={{b.id}} />
-
+				
+				<form action="pedido_Solicitacao" id="form-aceitar-solicitacao" method="post">
+					{% csrf_token %} 
+					
+						<input type="hidden" name="cPedido_usuario_id" value="{{b.usuario.id}}"/> 
+						<input type="hidden" name="cPedido_solicitacao" value="{{True}}"/> 
+						<input type="hidden" name="cPedido_solicitacao_id" value="{{b.id}}"/>
 
 					<button type="submit" value="aceitar"
 						class="btn btn-success btn-lg" title="Aceitar solicitação">
@@ -88,11 +89,12 @@
 
 		</fieldset>
 		{% endif %}
-		<fieldset>
+		
+		<fieldset id="fieldset-amigos">
 			<legend>Meus amigos</legend>
 
 			{% for e in Meus %}
-			<ul>
+			<ul id="ul-amigos">
 				<div style="background:; width: 79%; float: left;">
 					<li><img src="{{e.amigo.foto.url}}" id="imgAmigos"/></li>
 
@@ -111,10 +113,9 @@
 
 				<div style="background:; float: right;">
 				
-				<form action="desafiar_amigo" method = "post" > {% csrf_token %}
-					<input type ="hidden" name ="id_usuario" value={{e.amigo.id}}>
-					<button type="submit" value="desafiar"
-						class="btn btn-primary btn-lg" >
+				<form action="desafiar_amigo" id="desafiar-amigo" method = "post" > {% csrf_token %}
+					<input type ="hidden" id="hide-desafio" name ="id_usuario" value={{e.amigo.id}}>
+					<button type="submit" value="desafiar" id="btn-desafiar" class="btn btn-primary btn-lg" >
 						<span class="glyphicon glyphicon-tint"></span> Desafiar
 					</button>
 				</form>
@@ -124,16 +125,6 @@
 			<!-- <hr style="margin-bottom:0px; border: 1; height: 0; border-top: 1px solid rgba(0, 0, 0, 0.1); border-bottom: 1px solid rgba(255, 255, 255, 0.3);"> -->
 			{% endfor %}
 		</fieldset>
-		
-		<script type="text/javascript">
-			$(function() {
-			  $("#idpesquisa").autocomplete({
-			    source: "pesquisa",
-			    minLength: 2,
-			  });
-			});
-		</script>
-		
 	</div>
 </div>
 {% endblock contents %}
