--- a/RedeSocial/templates/en/public/Timeline.HTML
+++ b/RedeSocial/templates/en/public/Timeline.HTML
@@ -50,17 +50,19 @@
 	</div>
 </div>
 
-<table width="92%" border="1" cellpadding="4" cellspacing="1" style="margin: 10px 27px; text-align: center;">
+<table class="table-nav-times" cellpadding="1" cellspacing="0">
 	<tbody>
 		<tr>
 			<td>
 				<a href="timeline" id="geral">Geral</a>
 			</td>
 			
-			<td>
+			<td class="td-centro">
+				
 				<a href="time_amigos"id="amigos">Amigos</a>
+				
 			</td>
-			
+				
 			<td>
 				<a href="time_turma" id="turma">Turma</a>
 			</td>
